Update index.html to match README.md

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
     <h2>Can I contribute?</h2>
     <p>Absolutely! Feel free to add your favorite phrases whether they are religious or not. Use the religion camp on the JSON to clarify it. 1 = Catholic, 0 = non-religious. You can also add new translations or fix possible errors on the current ones.</p>
-
+    <p>We are not currently accepting web contributions. There are plans to migrate the documentation to Vue, which may affect the process in the future.</p>
+    
     <h2>Can I use this for my project?</h2>
     <p>Yes, you can. You can also fork this and use it however you want.</p>
 
