--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <li>English = en</li>
         <li>Spanish = sp</li>
         <li>French = fr</li>
+        <li>Japanese = jp</li>
     </ul>
     <section>
     <h3>Example of an HTTP request to get a random phrase and author in JavaScript</h3>
@@ -98,6 +99,7 @@
                     <option value="en" selected>English</option>
                     <option value="es">Spanish</option>
                     <option value="fr">French</option>
+                    <option value="jp">Japanese</option>
                   </select>
                 <button id="button"> Test </button> 
                 <p id="test-text"> </p>
